--- a/KingfoodIO/wwwroot/html/new_meals_restaurant.html
+++ b/KingfoodIO/wwwroot/html/new_meals_restaurant.html
@@ -105,7 +105,7 @@
 													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="padding-bottom:15px;padding-top:25px;width:100%;padding-right:0px;padding-left:0px;">
-																<div class="alignment" align="left" style="line-height:10px"><a href="http://www.example.com/" target="_blank" style="outline:none" tabindex="-1"><img src="https://wiiyaimage.blob.core.windows.net/images/longlogo.png" style="display: block; height: auto; border: 0; width: 187px; max-width: 100%;" width="187" alt="Logo" title="Logo"></a></div>
+																<div class="alignment" align="left" style="line-height:10px"><a href="https://www.groupmeals.com/" target="_blank" style="outline:none" tabindex="-1"><img src="https://wiiyaimage.blob.core.windows.net/images/longlogo.png" style="display: block; height: auto; border: 0; width: 187px; max-width: 100%;" width="187" alt="Logo" title="Logo"></a></div>
 															</td>
 														</tr>
 													</table>
@@ -133,8 +133,8 @@
 															<td class="pad" style="padding-bottom:5px;padding-left:20px;padding-right:10px;">
 																<div style="font-family: sans-serif">
 																	<div class style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #f08619; line-height: 1.2;">
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:50px;"><strong>You got a new order!</strong></span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:40px;"><strong>您有新的订单!</strong></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:30px;"><strong>You got a new reservation!</strong></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:17px;"><strong>您有新的预订订单!</strong></span></p>
 																	</div>
 																</div>
 															</td>
@@ -180,8 +180,8 @@
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:0px;">
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 21px;"><span style="color:#f08619;"><span style="font-size:20px;">Restaurant Name:</span></span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 21px;"><span style="color:#f08619;"><span style="font-size:20px;">餐厅名称:</span></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 21px;"><span style="color:#f08619;"><span style="font-size:17px;">Restaurant Name:</span></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 21px;"><span style="color:#f08619;"><span style="font-size:13px;">餐厅名称:</span></span></p>
 																	</div>
 																</div>
 															</td>
@@ -251,7 +251,7 @@
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Meal Time:</span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">用餐时间:</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:13px;color:#f08619;">用餐时间:</span></p>
 																	</div>
 																</div>
 															</td>
@@ -322,7 +322,7 @@
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Details：</span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">明细：</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:13px;color:#f08619;">明细：</span></p>
 																	</div>
 																</div>
 															</td>
@@ -392,7 +392,7 @@
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Remarks：</span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">备注：</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:13px;color:#f08619;">备注：</span></p>
 																	</div>
 																</div>
 															</td>
