fix: 无法更新备注bug

--- a/KingfoodIO/wwwroot/html/new_meals_customer.html
+++ b/KingfoodIO/wwwroot/html/new_meals_customer.html
@@ -135,6 +135,7 @@
 																	<div class style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #f08619; line-height: 1.2;">
 																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:30px;"><strong>Order submission is successful, we will respond to your order within 24 hours of update!</strong></span></p>
 																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:17px;"><strong>订单提交成功，我们将在24小时内回复您订单的后续情况!</strong></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:17px;"><strong>就餐时请告知商家谷米预定，防止商家混淆订单.</strong></span></p>
 																	</div>
 																</div>
 															</td>
